<?php
declare(strict_types=1);

namespace JulianBrett\MealPlanner\Core\MealPlanner\Meal;

class Meal
{

}
