<?php
declare(strict_types=1);

namespace JulianBrett\MealPlanner\Core\MealPlanner;

class MealPlanner
{
    //put your code here
}
