<?php

declare (strict_type = 1);

class MealPlannerService {
    //put your code here
}
