<?php
declare(strict_type=1);

namespace JulianBrett\MealPlanner\Core\Recipe\Instruction;

class Instruction {
    //put your code here
}
