<?php
declare(strict_types=1);

namespace JulianBrett\MealPlanner\Core\Recipe;

class Recipe
{
    //put your code here
}
