<?php

declare (strict_type = 1);

class RecipeBook {
    //put your code here
}
