<?php
declare(strict_types=1);

namespace JulianBrett\MealPlanner\Core\RecipeBook;

class RecipeBookService
{
    //put your code here
}
