<?php

declare (strict_type = 1);

class ShoppingList {
    //put your code here
}
