<?php
declare(strict_types=1);

namespace JulianBrett\MealPlanner\Core\ShoppingList\ShoppingListItem;

use JulianBrett\MealPlanner\Core\Ingredient\Ingredient;

class ShoppingListItem extends Ingredient
{
    //put your code here
}
