<?php
declare(strict_types=1);

namespace JulianBrett\MealPlanner\Core\ShoppingList;

class ShoppingListService
{
    //put your code here
}
